cmake_minimum_required(VERSION 3.5)
project(${CMAKE_WORKSPACE_NAME}_accumulators)

find_package(BCM)
include(BCMDeploy)
include(BCMSetupVersion)

find_package(${CMAKE_WORKSPACE_NAME}_core)
find_package(${CMAKE_WORKSPACE_NAME}_static_assert)
find_package(${CMAKE_WORKSPACE_NAME}_iterator)
find_package(${CMAKE_WORKSPACE_NAME}_tuple)
find_package(${CMAKE_WORKSPACE_NAME}_numeric_ublas)
find_package(${CMAKE_WORKSPACE_NAME}_parameter)
find_package(${CMAKE_WORKSPACE_NAME}_mpl)
find_package(${CMAKE_WORKSPACE_NAME}_range)
find_package(${CMAKE_WORKSPACE_NAME}_assert)
find_package(${CMAKE_WORKSPACE_NAME}_fusion)
find_package(${CMAKE_WORKSPACE_NAME}_type_traits)
find_package(${CMAKE_WORKSPACE_NAME}_concept_check)
find_package(${CMAKE_WORKSPACE_NAME}_preprocessor)
find_package(${CMAKE_WORKSPACE_NAME}_circular_buffer)
find_package(${CMAKE_WORKSPACE_NAME}_array)
find_package(${CMAKE_WORKSPACE_NAME}_config)
find_package(${CMAKE_WORKSPACE_NAME}_throw_exception)
find_package(${CMAKE_WORKSPACE_NAME}_numeric_conversion)
find_package(${CMAKE_WORKSPACE_NAME}_typeof)

bcm_setup_version(VERSION 1.58.0)

add_library(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE)
set_property(TARGET ${CMAKE_WORKSPACE_NAME}_accumulators PROPERTY EXPORT_NAME accumulators)

target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::core)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::static_assert)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::iterator)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::tuple)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::numeric_ublas)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::parameter)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::mpl)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::range)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::assert)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::fusion)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::type_traits)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::concept_check)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::preprocessor)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::circular_buffer)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::array)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::config)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::throw_exception)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::numeric_conversion)
target_link_libraries(${CMAKE_WORKSPACE_NAME}_accumulators INTERFACE boost::typeof)

bcm_deploy(TARGETS ${CMAKE_WORKSPACE_NAME}_accumulators INCLUDE include NAMESPACE ${CMAKE_WORKSPACE_NAME}::)

add_subdirectory(test)
